# automated-docker-teamspeak3

./: Dockerfile  README.md  build-run.sh  requirements.txt
ansible/: ansible.cfg  deploy-teamspeak.yml  deploy-ts3.yml  pyproject.toml
ansible/files/: Dockerfile
ansible/groups_vars/: all
ansible/host_vars/: localhost
ansible/lookup_plugins/: teamspeak3.py
ansible/roles/teamspeak3/tasks/: main.yml
ansible/roles/teamspeak3/templates/: docker-compose.yml.j2
