[tool.poetry]
name = "teamspeak3-docker-ansible"
version = "1.0.0"
description = ""
authors = ["LEDUC Florian <fuz1on@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
docker = "^4.4.0"
Jinja2 = "^2.11.2"
ansible = "2.9"
docker-compose = "^1.27.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
